[package]
name = "usbd-audio-2.0"
description = "Audio 2.0 USB class implementation for usb-device"
authors = ["Ava <ava.codie.wolfe@gmail.com"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wolfenick/usbd-audio-2.0"
keywords = ["no-std", "usb-device", "atsamd"]
license = "MIT OR Apache-2.0"
include = ["README.md", "/src", "LICENSE"]

[dependencies]
usb-device = "0.3.1"
defmt = "0.3.5"
